Finished schedule and fixed mobile overflow

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -15,6 +15,10 @@ $bright-red: #e85d5d;
 @import "bootstrap";
 
 //global styles
+html, body {
+    overflow-x: hidden ;
+}
+
 body {
     font-family: $recursive;
 }
